--- a/packages/theme-material/src/index.scss
+++ b/packages/theme-material/src/index.scss
@@ -1,6 +1,6 @@
 // Based on: https://codepen.io/avstorm/pen/gKGbxo
 
-.sflib-material {
+.phlib-material {
   $primary: #0077FF;
   $dark: #000;
   $colorError: #dc3545;
@@ -10,12 +10,12 @@
     box-sizing: border-box;
   }
 
-  .sflib__multiple-fields-row {
+  .phlib__multiple-fields-row {
     display: flex;
     grid-gap: 1em;
     margin-bottom: 1em;
 
-    .sflib__field-wrapper {
+    .phlib__field-wrapper {
       margin-bottom: 0;
 
       input {
@@ -24,21 +24,21 @@
     }
   }
 
-  .sflib__field-wrapper {
+  .phlib__field-wrapper {
     position: relative;
     margin-bottom: 1em;
     width: 100%;
     overflow: hidden;
   }
 
-  .sflib__checkbox-wrapper {
+  .phlib__checkbox-wrapper {
     display: flex;
     align-items: center;
   }
 
-  .sflib__input-text,
-  .sflib__input-textarea,
-  .sflib__input-select, {
+  .phlib__input-text,
+  .phlib__input-textarea,
+  .phlib__input-select, {
     -webkit-appearance: none;
     appearance: none;
     width: 100%;
@@ -62,7 +62,7 @@
       box-shadow: inset 0 -1px 0 rgba($dark, .5);
     }
 
-    &:not(:placeholder-shown) + .sflib__field-label {
+    &:not(:placeholder-shown) + .phlib__field-label {
       color: rgba($dark, .5);
       transform: translate3d(0, -12px, 0) scale(.75);
     }
@@ -72,11 +72,11 @@
       outline: none;
       box-shadow: inset 0 -2px 0 $primary;
 
-      + .sflib__field-label {
+      + .phlib__field-label {
         color: $primary;
         transform: translate3d(0, -12px, 0) scale(.75);
 
-        + .sflib__material-bg-focus {
+        + .phlib__material-bg-focus {
           transform: scaleX(1);
           transition: all .1s ease;
         }
@@ -84,7 +84,7 @@
     }
   }
 
-  .sflib__field-label {
+  .phlib__field-label {
     position: absolute;
     top: 1.25rem;
     left: .75rem;
