--- a/packages/theme-material/src/index.scss
+++ b/packages/theme-material/src/index.scss
@@ -1,12 +1,23 @@
 // Based on: https://codepen.io/avstorm/pen/gKGbxo
+@use 'sass:math';
 
 .phlib-material {
   $primary: #0077FF;
   $dark: #000;
   $colorError: #dc3545;
   $colorErrorLight: #f8d7da;
+  $md-checkbox-border-color: rgba(0, 0, 0, 0.54);
+  $md-checkbox-border-color-disabled: rgba(0, 0, 0, 0.26);
+  $md-checkbox-checked-color-disabled: rgba(0, 0, 0, 0.26);
+  $md-checkbox-size: 1.25em;
+  $md-checkbox-padding: .25em;
+  $md-checkbox-border-width: 2px;
+  $md-checkbox-border-radius: 0.125em;
+  $md-checkmark-width: 0.125em;
+  $md-checkmark-color: #fff;
+  $md-checkbox-label-padding: .75em;
 
-  * {
+  *, *:before, *:after {
     box-sizing: border-box;
   }
 
@@ -31,9 +42,87 @@
     overflow: hidden;
   }
 
+  // Styles from https://codepen.io/hansmaad/pen/qaGMQL
   .phlib__checkbox-wrapper {
-    display: flex;
-    align-items: center;
+    position: relative;
+    text-align: left;
+
+    label {
+      -webkit-user-select: none;
+      user-select: none;
+      cursor: pointer;
+      display: inline;
+      line-height: $md-checkbox-size;
+      vertical-align: top;
+      clear: both;
+      padding-left: 1px;
+      &:not(:empty) {
+        padding-left: $md-checkbox-label-padding;
+      }
+
+      &:before, &:after {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
+
+      &:before {
+        // box
+        width: $md-checkbox-size;
+        height: $md-checkbox-size;
+        background: #fff;
+        border: $md-checkbox-border-width solid $md-checkbox-border-color;
+        border-radius: $md-checkbox-border-radius;
+        cursor: pointer;
+        transition: background .3s;
+      }
+
+      &:after {
+        // checkmark
+      }
+    }
+
+    input[type="checkbox"] {
+      outline: 0;
+      visibility: hidden;
+      width: $md-checkbox-size;
+      margin: 0;
+      display: block;
+      float: left;
+      font-size: inherit;
+
+      &:checked {
+        + label:before{
+          background: $primary;
+          border:none;
+        }
+        + label:after {
+
+          $md-checkmark-size: $md-checkbox-size - 2 * $md-checkbox-padding;
+
+          transform: translate($md-checkbox-padding, math.div($md-checkbox-size, 2) - math.div($md-checkmark-size, 2.6)) rotate(-45deg);
+          width: $md-checkmark-size;
+          height: math.div($md-checkmark-size, 2);
+
+          border: $md-checkmark-width solid $md-checkmark-color;
+          border-top-style: none;
+          border-right-style: none;
+        }
+      }
+
+      &:disabled {
+        + label:before{
+          border-color: $md-checkbox-border-color-disabled;
+        }
+        &:checked {
+          + label:before{
+            background: $md-checkbox-checked-color-disabled;
+          }
+        }
+      }
+    }
+
   }
 
   .phlib__input-text,
@@ -94,5 +183,28 @@
     transform: translate3d(0, 0, 0);
     transition: all .2s ease;
     pointer-events: none;
+  }
+
+  .phlib__error-message {
+    font-size: .9rem;
+
+    ul {
+      margin: {
+        top: 1em;
+        bottom: 0;
+      };
+      padding-left: 0;
+      list-style-type: none;
+    }
+
+    li {
+      margin-bottom: 0.25rem;
+
+      &:before {
+        content: "–";
+        text-indent: -5px;
+        margin-right: 0.5rem;
+      }
+    }
   }
 }
