chore: add stylelint

--- a/development/style.scss
+++ b/development/style.scss
@@ -1,6 +1,6 @@
-@import '../packages/theme-basic/src';
-@import '../packages/theme-material/src';
+@import "../packages/theme-basic/src";
+@import "../packages/theme-material/src";
 
 :root {
-  font-family: 'Roboto', sans-serif;
+  font-family: Roboto, sans-serif;
 }
