--- a/packages/theme-material/src/index.scss
+++ b/packages/theme-material/src/index.scss
@@ -1,9 +1,10 @@
 // Based on: https://codepen.io/avstorm/pen/gKGbxo
 @use "sass:math";
+@use '../../../common/styles/radio-buttons' as radio-buttons;
 
 .phlib-material {
-  $primary: #07f;
-  $dark: #000;
+  $color-primary: #07f;
+  $color-dark: #000;
   $color-error: #dc3545;
   $color-error-light: #f8d7da;
   $md-control-item-border: #c8ccd4;
@@ -96,7 +97,7 @@
 
       &:checked {
         + label::before {
-          background: $primary;
+          background: $color-primary;
           border: none;
         }
 
@@ -136,7 +137,7 @@
     position: absolute;
     top: 1.25rem;
     left: 0.75rem;
-    color: rgba($dark, 0.5);
+    color: rgba($color-dark, 0.5);
     font-weight: 500;
     transform-origin: 0 0;
     transform: translate3d(0, 0, 0);
@@ -145,7 +146,7 @@
   }
 
   &:focus + .phlib__field-label {
-    color: $primary;
+    color: $color-primary;
     transform: translate3d(0, -12px, 0) scale(0.75);
 
     + .phlib__material-bg-focus {
@@ -171,9 +172,9 @@
     height: 3.5rem;
     font-size: 1rem;
     font-weight: 400;
-    background: rgba($dark, 0.02);
-    box-shadow: inset 0 -1px 0 rgba($dark, 0.3);
-    color: $dark;
+    background: rgba($color-dark, 0.02);
+    box-shadow: inset 0 -1px 0 rgba($color-dark, 0.3);
+    color: $color-dark;
     transition: all 0.15s ease;
 
     &::placeholder {
@@ -181,19 +182,19 @@
     }
 
     &:hover {
-      background: rgba($dark, 0.04);
-      box-shadow: inset 0 -1px 0 rgba($dark, 0.5);
+      background: rgba($color-dark, 0.04);
+      box-shadow: inset 0 -1px 0 rgba($color-dark, 0.5);
     }
 
     &:focus {
-      background: rgba($dark, 0.05);
+      background: rgba($color-dark, 0.05);
       outline: none;
-      box-shadow: inset 0 -2px 0 $primary;
+      box-shadow: inset 0 -2px 0 $color-primary;
     }
 
     /* stylelint-disable no-descending-specificity */
     &:not(:placeholder-shown) + .phlib__field-label {
-      color: rgba($dark, 0.5);
+      color: rgba($color-dark, 0.5);
       transform: translate3d(0, -12px, 0) scale(0.75);
     }
     /* stylelint-enable no-descending-specificity */
@@ -230,79 +231,10 @@
     }
   }
 
-  .phlib__radio-group {
-    display: flex;
-    flex-direction: column;
+  @include radio-buttons.index($color-primary, $md-control-item-border);
 
-    .phlib__radio-group-label {
-      color: rgb(0 0 0 / 60%);
-      margin-bottom: 0.5em;
-    }
-
-    .phlib__radio-buttons {
-      display: flex;
-      flex-flow: column;
-    }
-
-    .phlib__radio-button {
-      position: relative;
-      cursor: pointer;
-      line-height: 20px;
-      font-size: 14px;
-      margin: 0.5em 0;
-
-      .phlib__radio-button-label {
-        position: relative;
-        display: block;
-        float: left;
-        margin-right: 10px;
-        width: 20px;
-        height: 20px;
-        border: 2px solid $md-control-item-border;
-        border-radius: 100%;
-        -webkit-tap-highlight-color: transparent;
-
-        &::after {
-          z-index: 1;
-          content: "";
-          position: absolute;
-          top: 3px;
-          left: 3px;
-          width: 10px;
-          height: 10px;
-          border-radius: 100%;
-          background: $primary;
-          transform: scale(0);
-          transition: all 0.2s ease;
-          opacity: 0.08;
-          pointer-events: none;
-        }
-      }
-
-      &:hover {
-        .phlib__radio-button-label {
-          &::after {
-            z-index: 1;
-            transform: scale(3.6);
-          }
-        }
-      }
-    }
-
-    input[type="radio"]:checked {
-      & + .phlib__radio-button-label {
-        border-color: $primary;
-
-        &::after {
-          transform: scale(1);
-          transition: all 0.2s cubic-bezier(0.35, 0.9, 0.4, 0.9);
-          opacity: 1;
-        }
-      }
-    }
-
-    .phlib_radio-hidden {
-      display: none;
-    }
+  .phlib__radio-group-label {
+    color: rgb(0 0 0 / 60%);
+    margin-bottom: 0.5em;
   }
 }
