--- a/packages/theme-basic/src/index.scss
+++ b/packages/theme-basic/src/index.scss
@@ -1,4 +1,4 @@
-@use '../../../common/styles/radio-buttons' as radio-buttons;
+@use "../../../common/styles/radio-buttons" as radio-buttons;
 
 .phlib-basic {
   $color-primary: #007bff;
