--- a/packages/theme-basic/src/index.scss
+++ b/packages/theme-basic/src/index.scss
@@ -1,11 +1,11 @@
 @use "../../../common/styles/radio-buttons" as radio-buttons;
 
 .phlib-basic {
-  $color-primary: #007bff;
-  $color-primary-light: #e9f2ff;
-  $color-error: #dc3545;
-  $color-error-light: #f8d7da;
-  $color-border: rgb(209 213 219);
+  --color-primary: #007bff;
+  --color-primary-light: #e9f2ff;
+  --color-error: #dc3545;
+  --color-error-light: #f8d7da;
+  --color-border: rgb(209 213 219);
 
   * {
     box-sizing: border-box;
@@ -43,16 +43,16 @@
     font-size: 1rem;
     padding: 0 0.75rem;
     line-height: 2.75rem;
-    border: 1px solid $color-border;
+    border: 1px solid var(--color-border);
     border-radius: 0.5rem;
     background-color: rgb(249 250 251);
     margin-bottom: 0.5rem;
     appearance: none;
 
     &:focus {
-      border-color: $color-primary;
-      outline: $color-primary solid 1px;
-      background-color: $color-primary-light;
+      border-color: var(--color-primary);
+      outline: var(--color-primary) solid 1px;
+      background-color: var(--color-primary-light);
     }
 
     &:disabled {
@@ -62,8 +62,8 @@
     }
 
     &.phlib__field-error {
-      border-color: $color-error;
-      background-color: $color-error-light;
+      border-color: var(--color-error);
+      background-color: var(--color-error-light);
     }
   }
 
@@ -81,7 +81,7 @@
     color: currentcolor;
     width: 1.5rem;
     height: 1.5rem;
-    border: 0.15rem solid $color-border;
+    border: 0.15rem solid var(--color-border);
     border-radius: 0.15rem;
     transform: translateY(-0.075rem);
     display: grid;
@@ -94,7 +94,7 @@
     height: 0.9em;
     transform: scale(0);
     transition: 120ms transform ease-in-out;
-    box-shadow: inset 1em 1em $color-primary;
+    box-shadow: inset 1em 1em var(--color-primary);
 
     /* Windows High Contrast Mode */
     background-color: canvastext;
@@ -144,7 +144,7 @@
     }
   }
 
-  @include radio-buttons.index($color-primary, $color-border);
+  @include radio-buttons.index(var(--color-primary), var(--color-border));
 
   .phlib__radio-group-label {
     @include label-base;
@@ -161,13 +161,13 @@
     padding: 0;
     list-style: none;
     position: absolute;
-    top: 100%;
+    top: calc(100% + 2px); // 100% + border
     width: 100%;
     display: none;
     background-color: #fff;
-    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
+    box-shadow: 0 0 0 1px rgb(233 236 239), 0 2px 4px 0 rgb(0 0 0 / 10%);
     border-radius: 2px;
-    max-height: 200px;
+    max-height: 275px;
     overflow-y: auto;
 
     li {
@@ -176,6 +176,11 @@
 
       &:hover {
         background-color: #f8f9fa;
+      }
+
+      &:focus {
+        background-color: var(--color-primary);
+        color: #fff;
       }
     }
   }
