--- a/packages/theme-material/src/index.scss
+++ b/packages/theme-material/src/index.scss
@@ -185,6 +185,12 @@
       box-shadow: inset 0 -2px 0 $color-primary;
     }
 
+    &:disabled {
+      background-color: rgb(0 0 0 / 12%);
+      color: $md-control-color-disabled;
+      cursor: not-allowed;
+    }
+
     /* stylelint-disable no-descending-specificity */
     &:not(:placeholder-shown) + .phlib__field-label {
       color: $color-primary;
