feat: introduce hooks useUrl and useMinMax, and make radio-button font sizes responsive

--- a/common/styles/partials/_radio-buttons.scss
+++ b/common/styles/partials/_radio-buttons.scss
@@ -14,7 +14,7 @@
       position: relative;
       cursor: pointer;
       line-height: 20px;
-      font-size: 14px;
+      font-size: 1rem;
       margin: 0.5em 0;
 
       .phlib__radio-button-label {
