--- a/common/styles/partials/_radio-buttons.scss
+++ b/common/styles/partials/_radio-buttons.scss
@@ -21,12 +21,16 @@
         position: relative;
         display: block;
         float: left;
-        margin-right: 10px;
+        margin-inline-end: 10px;
         width: 20px;
         height: 20px;
         border: 2px solid $color-border;
         border-radius: 100%;
         -webkit-tap-highlight-color: transparent;
+
+        [dir="rtl"] & {
+          float: right;
+        }
 
         &::after {
           z-index: 1;
