--- a/packages/theme-basic/src/index.scss
+++ b/packages/theme-basic/src/index.scss
@@ -103,6 +103,13 @@
     display: grid;
     place-content: center;
 
+    [dir="rtl"] & {
+      margin: {
+        right: 0;
+        left: 1em;
+      };
+    }
+
     &:disabled {
       appearance: unset;
       background-color: var(--color-control-disabled);
@@ -142,7 +149,7 @@
 
     ul {
       margin: 0;
-      padding-left: 0;
+      padding: 0;
       list-style-type: none;
     }
 
@@ -152,7 +159,7 @@
       &::before {
         content: "–";
         text-indent: -5px;
-        margin-right: 0.5rem;
+        margin-inline-end: 0.5rem;
       }
     }
   }
