--- a/packages/theme-basic/src/index.scss
+++ b/packages/theme-basic/src/index.scss
@@ -46,10 +46,10 @@
     padding: 0 0.75rem;
     line-height: 2.75rem;
     border: 1px solid var(--color-border);
-    border-radius: 0.5rem;
+    border-radius: 0.35rem;
     background-color: rgb(249 250 251);
-    margin-bottom: 0.5rem;
     appearance: none;
+    margin-bottom: 0;
 
     &:focus {
       border-color: var(--color-primary);
@@ -144,7 +144,7 @@
   }
 
   .phlib__error-message {
-    margin-bottom: 10px;
+    margin: 0.5em 0;
     font-size: 0.9rem;
 
     ul {
