--- a/packages/theme-basic/src/index.scss
+++ b/packages/theme-basic/src/index.scss
@@ -46,10 +46,10 @@
     padding: 0 0.75rem;
     line-height: 2.75rem;
     border: 1px solid var(--color-border);
-    border-radius: 0.5rem;
+    border-radius: 0.35rem;
     background-color: rgb(249 250 251);
-    margin-bottom: 0.5rem;
     appearance: none;
+    margin-bottom: 0;
 
     &:focus {
       border-color: var(--color-primary);
@@ -103,6 +103,13 @@
     display: grid;
     place-content: center;
 
+    [dir="rtl"] & {
+      margin: {
+        right: 0;
+        left: 1em;
+      };
+    }
+
     &:disabled {
       appearance: unset;
       background-color: var(--color-control-disabled);
@@ -137,12 +144,12 @@
   }
 
   .phlib__error-message {
-    margin-bottom: 10px;
+    margin: 0.5em 0;
     font-size: 0.9rem;
 
     ul {
       margin: 0;
-      padding-left: 0;
+      padding: 0;
       list-style-type: none;
     }
 
@@ -152,7 +159,7 @@
       &::before {
         content: "–";
         text-indent: -5px;
-        margin-right: 0.5rem;
+        margin-inline-end: 0.5rem;
       }
     }
   }
