--- a/common/styles/partials/_select.scss
+++ b/common/styles/partials/_select.scss
@@ -1,6 +1,14 @@
 @use "../util/feature-detection" as feature-detection;
 
 @mixin index($color-primary) {
+  --color-options-background: #fff;
+  --color-options-text: #000;
+
+  @media (prefers-color-scheme: dark) {
+    --color-options-background: #1a1a1a;
+    --color-options-text: #b7b3b3;
+  }
+
   .phlib__select-wrapper {
     position: relative;
     height: 100%;
@@ -29,24 +37,29 @@
     top: calc(100% + 2px); // 100% + border
     width: 100%;
     display: none;
-    background-color: #fff;
+    background-color: var(--color-options-background);
     box-shadow: 0 0 0 1px rgb(233 236 239), 0 2px 4px 0 rgb(0 0 0 / 10%);
     border-radius: 2px;
     max-height: 275px;
     overflow-y: auto;
 
+    @media (prefers-color-scheme: dark) {
+      box-shadow: none;
+    }
+
     li {
       padding: 0.75em;
       cursor: pointer;
+      color: var(--color-options-text);
 
       @include feature-detection.has-pointer {
-        &:hover {
-          background-color: #f8f9fa;
-        }
-
         &:focus {
           background-color: $color-primary;
           color: #fff;
+
+          @media (prefers-color-scheme: dark) {
+            background-color: #000;
+          }
         }
       }
     }
