--- a/packages/theme-material/src/index.scss
+++ b/packages/theme-material/src/index.scss
@@ -4,18 +4,32 @@
 @use "../../../common/styles/partials/select" as select;
 
 .phlib-material {
-  $color-primary: #07f;
-  $color-dark: #000;
-  $color-error: #dc3545;
-  $color-error-light: #f8d7da;
-  $md-control-item-border: #c8ccd4;
-  $md-control-color-disabled: rgb(0 0 0 / 26%);
+  --color-primary: #07f;
+  --color-dark: #000;
+  --color-error: #f03;
+  --color-error-light: #f8d7da;
+  --color-label: rgb(0 0 0 / 50%);
+  --color-background: rgb(0 0 0 / 6%);
+  --color-background-disabled: rgb(0 0 0 / 14%);
+  --md-control-item-border: #c8ccd4;
+  --md-control-color-disabled: rgb(0 0 0 / 26%);
+  --md-checkmark-color: #fff;
+
+  @media (prefers-color-scheme: dark) {
+    --color-dark: #fff;
+    --color-label: #b7b3b3;
+    --color-background: rgb(249 250 251 / 10%);
+    --color-background-disabled: rgb(249 250 251 / 20%);
+    --md-control-item-border: transparent;
+    --md-control-color-disabled: #787b7e;
+    --md-checkmark-color: #fff;
+  }
+
   $md-checkbox-size: 1.25em;
   $md-checkbox-padding: 0.25em;
   $md-checkbox-border-width: 2px;
   $md-checkbox-border-radius: 0.125em;
   $md-checkmark-width: 0.125em;
-  $md-checkmark-color: #fff;
   $md-checkbox-label-padding: 0.75em;
 
   *,
@@ -70,10 +84,15 @@
         width: $md-checkbox-size;
         height: $md-checkbox-size;
         background: #fff;
-        border: $md-checkbox-border-width solid $md-control-item-border;
+        border: $md-checkbox-border-width solid var(--md-control-item-border);
         border-radius: $md-checkbox-border-radius;
         cursor: pointer;
         transition: background 0.3s;
+
+        @media (prefers-color-scheme: dark) {
+          background-color: transparent;
+          border-color: var(--color-label);
+        }
       }
 
       [dir="rtl"] & {
@@ -105,7 +124,7 @@
 
       &:checked {
         + label::before {
-          background: $color-primary;
+          background: var(--color-primary);
           border: none;
         }
 
@@ -121,7 +140,7 @@
             );
           width: $md-checkmark-size;
           height: math.div($md-checkmark-size, 2);
-          border: $md-checkmark-width solid $md-checkmark-color;
+          border: $md-checkmark-width solid var(--md-checkmark-color);
           border-top-style: none;
           border-right-style: none;
 
@@ -139,8 +158,12 @@
 
       &:disabled {
         + label::before {
-          background: $md-control-color-disabled;
+          background: var(--md-control-color-disabled);
           border-color: transparent;
+
+          @media (prefers-color-scheme: dark) {
+            background-color: var(--color-background-disabled);
+          }
         }
       }
     }
@@ -150,7 +173,7 @@
     position: absolute;
     top: 1.25rem;
     left: 0.75rem;
-    color: rgba($color-dark, 0.5);
+    color: var(--color-label);
     font-weight: 500;
     transform-origin: 0 0;
     transform: translate3d(0, 0, 0);
@@ -165,7 +188,7 @@
 
   .phlib__select--small-label {
     .phlib__field-label {
-      color: $color-primary;
+      color: var(--color-primary);
       transform: translate3d(0, -12px, 0) scale(0.75);
 
       + .phlib__material-bg-focus {
@@ -192,35 +215,45 @@
     height: 3.5rem;
     font-size: 1rem;
     font-weight: 400;
-    background: rgba($color-dark, 0.02);
-    box-shadow: inset 0 -1px 0 rgba($color-dark, 0.3);
-    color: $color-dark;
+    background: var(--color-background);
+    box-shadow: inset 0 -1px 0 rgb(0 0 0 / 30%);
+    color: var(--color-dark);
     transition: all 0.15s ease;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
 
     &::placeholder {
       color: transparent;
     }
 
     &:hover {
-      background: rgba($color-dark, 0.04);
-      box-shadow: inset 0 -1px 0 rgba($color-dark, 0.5);
+      background: rgb(0 0 0 / 4%);
+      box-shadow: inset 0 -1px 0 rgb(0 0 0 / 50%);
+
+      @media (prefers-color-scheme: dark) {
+        background-color: var(--color-background);
+      }
     }
 
     &:focus {
-      background: rgba($color-dark, 0.05);
+      background: rgb(0 0 0 / 5%);
       outline: none;
-      box-shadow: inset 0 -2px 0 $color-primary;
+      box-shadow: inset 0 -2px 0 var(--color-primary);
+
+      @media (prefers-color-scheme: dark) {
+        background-color: var(--color-background);
+      }
     }
 
     &:disabled {
-      background-color: rgb(0 0 0 / 12%);
-      color: $md-control-color-disabled;
+      background-color: var(--color-background-disabled);
+      color: var(--md-control-color-disabled);
       cursor: not-allowed;
     }
 
     /* stylelint-disable no-descending-specificity */
     &:not(:placeholder-shown) + .phlib__field-label {
-      color: $color-primary;
+      color: var(--color-primary);
       transform: translate3d(0, -12px, 0) scale(0.75);
     }
     /* stylelint-enable no-descending-specificity */
@@ -242,6 +275,7 @@
         bottom: 0;
       };
 
+      color: var(--color-error);
       padding: 0;
       list-style-type: none;
     }
@@ -257,12 +291,12 @@
     }
   }
 
-  @include radio-buttons.index($color-primary, $md-control-item-border, $md-control-color-disabled);
+  @include radio-buttons.index(var(--color-primary), var(--md-control-item-border), var(--md-control-color-disabled));
 
   .phlib__radio-group-label {
     color: rgb(0 0 0 / 60%);
     margin-bottom: 0.5em;
   }
 
-  @include select.index($color-primary);
+  @include select.index(var(--color-primary));
 }
